# control-guided-nas

./: .gitignore  CLAUDE.md  DIFFERENTIABLE_README.md  Manifest.toml  Project.toml  README.md  environment.yaml  example.py  pyproject.toml
data/distance_evaluation/: Test_for_Normality.py  Visualization_of_Error.py  result_0430_xception.csv
examples/: diameters.csv  diameters_fixed.csv  diameters_v1.csv  diameters_v2.csv  diameters_v3.csv  diameters_v4.csv  diameters_v5.csv  diameters_v6.csv  differentiable_example.py  example.py  reach.jl  scan.ipynb  scan.py  split_computing_example.ipynb  split_computing_example.py
notebooks/: diameters.ipynb  diameters.jl  multi_system_heuristic.ipynb  multi_system_heuristic.py
src/: diameters.ipynb  get_max_diam.jl  juliapkg.json  models.jl  reachability.jl  wrapper.py
src/.ipynb_checkpoints/: diameters-checkpoint.ipynb
src/control_guided_nas/: Models.jl  Reachability.jl  __init__.py  differentiable_wrapper.py  get_max_diam.jl  get_max_diam_ad.jl  juliapkg.json  linear_reach.py  wrapper.py  zonotope.py
