[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "control-guided-nas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "juliacall",
    "juliapkg",
    "numpy",
]

[project.optional-dependencies]
examples = [
    "matplotlib",
    "pandas",
    "ipykernel",
    "tqdm",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "I"
]

[tool.ruff.format]
docstring-code-format = true

