[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "control-guided-nas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "juliacall",
    "juliapkg",
    "noisyreach @ git+https://github.com/shengjiex98/noisyreach",
    "numpy",
]

[project.optional-dependencies]
examples = ["matplotlib", "pandas", "ipykernel", "tqdm", "ipywidgets"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true

# [tool.uv.sources]
# noisyreach = { git = "https://github.com/shengjiex98/noisyreach" }
# noisyreach = { path = "../noisyreach", editable = true }
